--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": [git
+            "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
